@@ -2,22 +2,22 @@
 Hash: SHA256
 
 DIST affine-1.2.0.tar.gz 10918 SHA256 69e6f82130bfc61a223624f49359e7e3bda131221ca02f7da486a3d0505c7efa SHA512 7671d9d5458b713d1f8bc3714983e17f1e981e97b7aaf9923fd1ceb8743861879c2b54cca17c36447ff00b3111f518ebe181f2e14fc296e95e66f38702499851 WHIRLPOOL 1b203e7cb79417a06aaa25227d27877a6abf1cf4c686d37ed8dd1c56548fa05ca3bfefc2227101e4c83df67d7c2def7c3c070bb3889daa1019eac82ae8aa6a12
+DIST affine-2.0.0.post1.tar.gz 11329 SHA256 2bb847da3ad7903ccb44ce2b9d09c1f0c571c1cab95222b2b03726fb82a51f86 SHA512 0db685b592031bab9a7038f276e5a0296c9e53fb6134e17816bc092f313cfb47684936bb8ba6d8225889423215fef1e7cf01484fb7846b6450ae0cd435888221 WHIRLPOOL d2f31829e899f7771e4d1a9d9b78ad04ec616f7e6f259094b27da8115f7dd72105f0fd4a4168e3e0489ba14f8e6735c1d34e2ffd40ad29aa0a86e24a7ad2fddf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQJ8BAEBCABmBQJW2C1JXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB593C4QAIzSJRpEmUkFOooEM++EkD8T
-nrFWHwTcQGPS7r4bZGNBB8/BHYH5FRkiwwryVZ7QBwFpy6DWobHdP8EXbUJqrRmA
-dF+/V1XLEBsSsrAz8sTMZWj5w+ZwgJkSsnNLcnPJSMD31cxed8AoPtSccc3aFSxv
-TVFfPjB8kybzd+lHb7I2eIIkT2sTtYe8TMWJZdE8wgTnD40yjg5cXCxh/B+oNlZG
-NvKEhAMhgSHi0mjDbPSxSwDUEyTYRwq1TRRZaXSUqaKsg6DcxUqrQ0bMH4TjSDDM
-xzCqA8lgDhGxNsZ1EW8+q2PlKDiB2rzCb0U6cKeWujFKX4okNVr6rvJfKShZN0e0
-howNR+7tIP5RR8tRM7yvBlk7wPksh57b12RXgU9P2VVYmQgJletaXqaRKGr1ekmZ
-rhZFQK/1e1ypsNTB6R0xWlXGt6e+ITqyBtJ9/abZrEy2JmFuxRERm3eCQzWuRpxq
-NuyQa2IJ2mynXSnbB5OXi5gpeXN5QAfvHNouLE4yxy+FKlt72xTOwhVmHqpNfz8A
-y74SIlEc+pZBz4K+FKpCEL/Pi0X7agqJ/1nG/kO2xHZDHoexlAUwvj3ciTnRxKPM
-lDIKMKiQcJB63fnvJbOp1O+HlaaPhcPSJtCNVH++IECRBvPTewCG5jjNtkRuZwo5
-EVBTlHj6pGAwcyZZqGq6
-=rEAv
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj4q7tfFIAAAAAALgAo
+aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
+QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
+Hn2EhxAA6ZG6f1NBI3M9ncqkolaVUEWkZZdXkwAwr9JMtN8V3gj9l4o2YIHTjpLw
+eCR70x9CgsW7HIr7mPCass6UslofnFJE4NR65TUuzTFf/6TC0UR19IIzVmGrQ/E7
+7pmIux//lGjI2GL2KejUS+ba5US2lcy8iTclIBD3aA8YERaz/LBoRgVxi93A/PVz
+lmenPyna6RpBbyWbZfb/+lTwt49zpVLB3viYWLrI4QvmtR0+7Epac/1ZFElJrlnF
+YPgVfPliNJ4HFGP4cqePkZyMSKYaYM37zXwlGiqObz9KB/3WpvOq3uFcxAdEuJit
+LpINuX2AD4JDHbf9eXYtcQrRg1VL1VNvbwo43iA29TxeRTrsH57EnThGMPnX/OnC
+NA03dYWuewCrlEAP1vy5hxD1yvuNZm7TLqcdoQuPKxRAeyYKlPGOsFexeQPjlsLN
+mkp4F+QYBtkvoFaFP2gKXRZpWLxTchW+CKatIZD6dB7g5ALbhDfTVue38pKFB1vj
+KvelvY4cKdOdlPDvwrT5ipeoat5rXTfC5Fr64VvmMcyCkHF8Kw3EOvQXcY85Zmam
+US4p+Mrzdm1q2wAR5KBQJLDcDCDJ1qSQigoIvfnRi6aOV9DcIRITiPEa91yOREqh
+qgdFgqbsCVe5xKuAFZYz8274e4rbrsN0Ed+G9cVsR4XxcPlSQUk=
+=EtX4
 -----END PGP SIGNATURE-----
