@@ -6,9 +6,12 @@ EAPI=6
 PYTHON_COMPAT=( python{2_7,3_4,3_5,3_6} )
 inherit distutils-r1
 
+MY_PV="2.0.0.post1"
+MY_P="$PN-$MY_PV"
+
 DESCRIPTION="Matrices describing affine transformation of the plane"
 HOMEPAGE="https://pypi.python.org/pypi/affine"
-SRC_URI="mirror://pypi/a/${PN}/${P}.tar.gz"
+SRC_URI="mirror://pypi/a/${PN}/${MY_P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
@@ -21,6 +24,8 @@ DEPEND="${RDEPEND}
 		dev-python/nose[${PYTHON_USEDEP}]
 		dev-python/pytest[${PYTHON_USEDEP}]
 	)"
+
+S="$WORKDIR/$MY_P"
 
 python_test() {
 	py.test || die
